# read-eth

./: .gitignore  CMakeLists.txt  INDEX.md  INSTALL.md  LICENSE  MANIFEST.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build.sh  run  setup.sh
include/: json.h  network.h  server.h
src/: json.c  main.c  network.c  server.c
web/: index.html
web/static/css/: style.css
web/static/js/: api.js  main.js  ui.js
